@@ -5,3 +5,6 @@ Please see http://www.poissonboltzmann.org/pdb2pqr/release-history
 - NEW FEATURES
 
 - BUG FIXES
+ * Fixed arc cosine domain problem caused by rounding. (Thanks Federico Fogolari) 
+ * Fixed misspelled command line options that prevented the use of PEOEPB and TYL06.
+ * Fixed error handling when certain data files are missing.
